android: Restore crash signal handlers for child processes

The original tombstone producing signal handlers are still used by
tests.

This can be revisited later:
https://bugs.chromium.org/p/chromium/issues/detail?id=912306

Bug: 911678, 912166, 912161
Change-Id: I55c0627bc431c6d61872a60d47423fd99567028f
Reviewed-on: https://chromium-review.googlesource.com/c/1361597
Commit-Queue: Joshua Peraza <jperaza@chromium.org>
Reviewed-by: Mark Mentovai <mark@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615230}
Former-commit-id: d587561ae75deb5e1f310cca81e59ab5970e7e3f